--- a/Final Report/Final-Report.Rmd
+++ b/Final Report/Final-Report.Rmd
@@ -11,24 +11,24 @@ bibliography: Final-Report-References.bib
 csl: ieee.csl
 link-citations: yes
 header-includes:
-   - \usepackage{animate}
-   - \usepackage{indentfirst}
+  - \usepackage{animate}
+  - \usepackage{indentfirst}
 ---
 
 # Introduction
 
-The aim of this report is to discover how Americans' time use patterns have changed over the last 15 years through discovering and analysing long-term trends within this period. The datasets [@atusdatasets] used to tackle this comprise some of the results of the American Time Use Survey (ATUS) [@ATUS]. ATUS respondents were interviewed once about how they spent their time on the previous day, where they were, and whom they were with. The survey records the time spent on 431 different activities that are grouped into 17 different categories. In the analysis these categories will often be referred to by a variable beginning with `tu` followed by a two-digit *category number*. The meaning of each category number and identifications of the rest of the variables can be found in the lexicon and data dictionary files which are obtained from the [ATUS website](https://www.bls.gov/tus/lexiconnoex0317.pdf).
+The aim of this report is to discover how Americans' time use patterns have changed over the last 15 years, through discovering and analysing long-term trends over the years of 2003 to 2017. The datasets [@atusdatasets] used to tackle this comprise some of the results of the American Time Use Survey (ATUS) [@ATUS]. ATUS respondents were interviewed once about how they spent their time on the previous day, where they were, and whom they were with. The survey records the time spent on 431 different activities that are grouped into 17 different categories. In the analysis these categories will often be referred to by a variable beginning with `tu` followed by a two-digit *category number*. The meaning of each category number and identifications of the rest of the variables can be found in the lexicon and data dictionary files which are available on the [ATUS website](https://www.bls.gov/tus/lexiconnoex0317.pdf).
 
-The [Bureau of Labor Statistics website](https://www.bls.gov/tus/charts.htm) provides a number of simple charts looking at the 2017 annual average for these categories. This report provides a more definitive conclusion on how time use patterns changed over the period, evidenced with statistical investigation of the data. The findings explain in depth where some of the biggest fluctuations are and briefly note possible reasons for this. Limitations to the analysis are noted where appropriate and these must be taken into account when performing any further analysis or summaries; mentioned alongside any conclusions.
+The [Bureau of Labor Statistics website](https://www.bls.gov/tus/charts.htm) provides a number of charts looking at the 2017 annual averages for these categories. This report provides a more definitive conclusion on how time use patterns changed over the period, evidenced with statistical investigation of the data. The findings offer in-depth explanations as to where some of the biggest fluctuations are and suggests possible reasons for these fluctuations. Limitations to the analysis are noted where appropriate and these must be taken into account when performing any further analysis or summaries, and mentioned alongside any conclusions.
 
-Usually when analysing data, statisticians will split the dataset into training data (around 90%) and validation data (around 10%). This ensures that any exploratory data analysis (EDA) conclusions from the training data can be verified using the remaining data. Whilst the analysis performed for this report follows this technique, it splits the data approximately evenly. This is to ensure that seasonality does not cause incorrect rejections of hypotheses generated in the EDA. More specifically, EDA was performed on every other month which doesn't include July.
+Usually when analysing data, statisticians will split the dataset into training data and validation data. This ensures that any conclusions drawn from exploratory data analysis (EDA) on the training data can be verified using the remaining "unseen" validation data. The analysis performed for this report follows this technique, splitting the data approximately in half to provide continuity and robustness in model training. The split was done by selecting even and odd months for training and validation data respectively, in order to ensure that seasonality did not cause incorrect rejections of hypotheses posed based upon the EDA, as well as ensuring there were no uneven gaps in the data which may lead to a loss of clarity in plotting. This split also allowed for conformity to one of the project requirements that the month of July was to be excluded initially and used for validation. 
 
-```{r Notes, echo=FALSE, message=FALSE}
+```{r Notes, echo=FALSE, message=FALSE, cache=TRUE}
 # - Ages from 80-84 are rounded to 80 and those 85+ are rounded to 85
 # - In the data -1 means blank, -2 means don't know, -3 means refused
 ```
 
-```{r Load and, if neccessary, install the package first, echo=FALSE, message=FALSE}
+```{r Load and, if necessary, install the package first, echo=FALSE, message=FALSE, cache=TRUE}
 if (!require("kableExtra")){
   install.packages("kableExtra")
   library("kableExtra")
@@ -95,12 +95,12 @@ if (!require("rgeos")){
 
 ## Exploratory Data Analysis
 
-```{r Import Data, echo=FALSE, message=FALSE}
+```{r Import Data, echo=FALSE, message=FALSE, cache=TRUE}
 ATUS.SUM <- import("atussum_0317.csv", setclass = "tibble")    # import raw summary data as TIBBLE
 ATUS.CPS <- import('atuscps_0317.csv', setclass = "tibble") # import CPS data as TIBBLE for geographical data use
 ```
 
-```{r Tidying the Data, echo=FALSE, message=FALSE}
+```{r Tidying the Data, echo=FALSE, message=FALSE, cache=TRUE}
 # Check there are no other NA's other than those in format explained in the notes
 NA_check <- sum(is.na(ATUS.SUM))
 
@@ -162,7 +162,7 @@ Data_minus_columns <- select(Data_minus_columns, -one_of("TRERNWA"))
 Data_minus_columns <- select(Data_minus_columns, -one_of("TEHRUSLT"))
 ```
 
-```{r Weighted Means, echo=FALSE, message=FALSE}
+```{r Weighted Means, echo=FALSE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_grouped <- Data_minus_columns %>% group_by(TUYEAR)
 
 weighted_means_data <- as_tibble(data.frame(TUYEAR = 2003:2017))
@@ -182,17 +182,17 @@ for (i in c(10:16, 18)){
 }
 ```
 
-```{r Initial Summary Data, echo=FALSE, message=FALSE}
+```{r Initial Summary Data, echo=FALSE, message=FALSE, cache=TRUE}
 melted_participation_data <- melt(select(part_weighted_means_data, "TUYEAR", grep("^part_tu", names(part_weighted_means_data))), id.vars="TUYEAR")
 melted_data <- melt(select(weighted_means_data, "TUYEAR", grep("^tu", names(weighted_means_data))), id.vars="TUYEAR")
 ```
 
-```{r Initial Summary Plots, echo=FALSE, message=FALSE}
+```{r Initial Summary Plots, echo=FALSE, message=FALSE, cache=TRUE}
 part_summary_plot <- ggplot(melted_participation_data, aes(x=TUYEAR, y=value, color = variable)) + geom_smooth(se=FALSE)
 summary_plot <- ggplot(melted_data, aes(x=TUYEAR, y=value, color=variable)) + geom_smooth(se=FALSE)
 ```
 
-```{r Printing Summary Plots, eval=FALSE, echo=FALSE, message=FALSE}
+```{r Printing Summary Plots, eval=FALSE, echo=FALSE, message=FALSE, cache=TRUE}
 print(part_summary_plot)
 print(summary_plot)
 ```
@@ -200,7 +200,7 @@ print(summary_plot)
 The ATUS dataset records time spent on activities in minutes. This report initially looks at how the proportion of American's partaking in the 17 different groups of activities has changed.
 The following table gives a summary of some of these changes. The activities included are those with a percentage change of over 10% and a variance greater than 0.5.
 
-```{r Weighted Means Variance and Percentage Change, echo=FALSE}
+```{r Weighted Means Variance and Percentage Change, echo=FALSE, cache=TRUE}
 variance <- sapply(weighted_means_data, function(col) var(col))
 percentage_change <- (weighted_means_data[15,]/weighted_means_data[1,] - 1)*100
 Activity_year_measures <- bind_rows(variance, percentage_change)
@@ -212,7 +212,7 @@ part_Activity_year_measures <- bind_rows(part_variance, part_percentage_change)
 part_Activity_year_measures <- bind_cols(as_tibble(data.frame(Measure = c("Variance", "% Change"))), select(part_Activity_year_measures, -TUYEAR))
 ```
 
-```{r Weighted Means Variance and Percentage Change Table, echo=FALSE}
+```{r Weighted Means Variance and Percentage Change Table, echo=FALSE, cache=TRUE}
 kable_names <- "Measure"
 for (i in 1:9){
   kable_names <- c(kable_names, paste0("tu0", i))
@@ -225,18 +225,18 @@ part_Activity_year_measures_values <- select(part_Activity_year_measures, -"Meas
 part_Activity_year_measures_values <- part_Activity_year_measures_values %>% mutate(row_n = 1:n()) %>% select_if(function(x) any(abs(x) > 10 & .$row_n == 2))
 part_Activity_year_measures <- bind_cols(select(part_Activity_year_measures, "Measure"), part_Activity_year_measures_values)
 part_tu03_kable <- kable(part_Activity_year_measures, caption = "Change in Participation of Activities", booktabs = T, digits = 2)
-kable_styling(part_tu03_kable, full_width = T, latex_options = c("striped", "hold_position"))
+kable_styling(part_tu03_kable, full_width = T, latex_options = c("hold_position"))
 ```
 
 It is immediately clear that the most compelling change out of the 17 activity groups over the period is in *Caring for & Helping Non-household (NonHH) Members* (tu04).
 
-```{r Best Subsets, include=FALSE}
+```{r Best Subsets, include=FALSE, cache=TRUE}
 best_subsets <- regsubsets(part_tu04~TUYEAR + TESEX + PEEDUCA + PEHSPNON + PTDTRACE + TEAGE + TELFS + TRCHILDNUM + TRHOLIDAY + TRSPPRES, data = Data_minus_columns, nvmax = 3, force.in = c(1))
 ```
 
 When fitting a linear model, the method of best subsets, with Year forced in, tells us that the most significant variables to predict the proportion of American's spending time *Caring for & Helping Nonhousehold (NonHH) Members* is **Sex** and **Number of Household Children**. A linear model is not sufficient to accurately predict tu04 participation, however it does give a good idea as to what is causing the change of the period 2003-2017.
 
-```{r part_tu04 Summary Model, message=FALSE, echo=FALSE, warning=FALSE}
+```{r part_tu04 Summary Model, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 n1 <- nrow(part_weighted_means_data)
 part_tu04_summary_model <- glm(part_tu04 ~ ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_weighted_means_data,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -254,7 +254,7 @@ part_tu04_summary_plot <- ggplot(part_weighted_means_data, aes(x=TUYEAR, y=part_
   geom_ribbon(data = part_tu04_summary_predicted, aes(y=fitted, ymin=ymin, ymax=ymax), alpha=0.1)
 ```
 
-```{r Sex Weighted Means, echo=FALSE, message=FALSE}
+```{r Sex Weighted Means, echo=FALSE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_grouped <- Data_minus_columns %>% group_by(TUYEAR, TESEX)
 
 sex_weighted_means_data <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
@@ -274,7 +274,7 @@ for (i in c(10:16, 18)){
 }
 ```
 
-```{r part_tu04 Sex Model, message=FALSE, echo=FALSE, warning=FALSE}
+```{r part_tu04 Sex Model, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 n2 <- nrow(part_sex_weighted_means_data)
 part_tu04_sex_model <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -291,11 +291,11 @@ part_tu04_sex_plot <- ggplot(part_sex_weighted_means_data, aes(x=TUYEAR, y=part_
   geom_ribbon(data = filter(part_tu04_sex_predicted, TESEX =="F"), aes(y=fitted, ymin=ymin, ymax=ymax),alpha=0.1)
 ```
 
-```{r part_tu04 Sex Plot, message=FALSE, eval=FALSE, echo=FALSE}
+```{r part_tu04 Sex Plot, message=FALSE, eval=FALSE, echo=FALSE, cache=TRUE}
 print(part_tu04_sex_plot)
 ```
 
-```{r TRCHILDNUM Weighted Means, message=FALSE, echo=FALSE, warning=FALSE}
+```{r TRCHILDNUM Weighted Means, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 sex_weighted_means_TRCHILDNUM <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
   sex_weighted_means_TRCHILDNUM <- full_join(sex_weighted_means_TRCHILDNUM, summarise_at(Data_minus_columns_year_sex_grouped, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
@@ -322,7 +322,7 @@ part_tu04_sex_TRCHILDNUM_plot <- ggplot(part_sex_weighted_means_data, aes(x=TUYE
   scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
 ```
 
-```{r Suitability of the model, echo=FALSE}
+```{r Suitability of the model, echo=FALSE, cache=TRUE}
  part_tu04_summary_model_anova <- glm(part_tu04 ~ ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data, family = quasi(link = "log", variance = "mu^2"),
                               mustart = rep(5, n2))
 ANOVA_for_sex <- anova(part_tu04_summary_model_anova, part_tu04_sex_model, test="F")
@@ -332,18 +332,18 @@ The continuous activity data is non-negative and non-linear. Therefore a suitabl
 
 The plot below is a graphical interpretation of the model, built on the training data, with the average number of household children for each group of the population displayed as **bars**.
 
-```{r part_tu04 Sex Plot with Number of Children, message=FALSE, echo=FALSE, fig.height=4}
+```{r part_tu04 Sex Plot with Number of Children, message=FALSE, echo=FALSE, fig.height=4, cache=TRUE}
 print(part_tu04_sex_TRCHILDNUM_plot)
 ```
 
-```{r Linear model for the plot, eval=TRUE, echo=FALSE, message=FALSE}
+```{r Linear model for the plot, eval=TRUE, echo=FALSE, message=FALSE, cache=TRUE}
 part_tu04_sex_linear_model <- lm(data=part_sex_weighted_means_data, part_tu04~TUYEAR + TESEX)
 part_tu04_sex_linear_model_summary <- summary(part_tu04_sex_linear_model)
 Year_t <- coefficients(part_tu04_sex_linear_model_summary)[2,3]
 lm_p_value <- pt(Year_t, part_tu04_sex_linear_model$df, lower=TRUE)
 ```
 
-```{r Adding TRCHILDNUM to model, echo=FALSE, message=FALSE}
+```{r Adding TRCHILDNUM to model, echo=FALSE, message=FALSE, cache=TRUE}
 #note we have only 1439 respondents with TRCHILDNUM>4 so we set these to 4 so that the algorithm converges.
 Data_minus_columns_year_sex_child_grouped <- Data_minus_columns
 Data_minus_columns_year_sex_child_grouped <- mutate(Data_minus_columns_year_sex_child_grouped, TRCHILDNUM = ifelse(TRCHILDNUM >4, 4, TRCHILDNUM)) %>% group_by(TUYEAR, TESEX, TRCHILDNUM)
@@ -370,7 +370,7 @@ part_tu04_sex_child_model <- glm(part_tu04 ~ -1 + TRCHILDNUM + TESEX + TESEX:ns(
                           mustart = rep(5, n3))
 ```
 
-```{r Testing the new model, eval=TRUE, echo=FALSE, message=FALSE}
+```{r Testing the new model, eval=TRUE, echo=FALSE, message=FALSE, cache=TRUE}
 sex_child_summary_for_t_test <- summary(part_tu04_sex_child_model)
 sex_child_p_value <- coefficients(sex_child_summary_for_t_test)[1,4]
 ```
@@ -378,7 +378,7 @@ The key observation is that, as the table suggested, over the period the partici
 
 ## Validation
 
-```{r Validation Data Tidying, echo=FALSE, message=FALSE}
+```{r Validation Data Tidying, echo=FALSE, message=FALSE, cache=TRUE}
 #remove full time vs part time as has -1
 Data_minus_columns_validation <- select(ATUS_validation_data, -one_of("TRDPFTPT"))
 #remove full time vs part time spouse as has -1
@@ -397,7 +397,7 @@ Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("
 Data_minus_columns_validation <- select(Data_minus_columns_validation, -one_of("TEHRUSLT"))
 ```
 
-```{r Sex Weighted Means Validation, echo=FALSE, message=FALSE}
+```{r Sex Weighted Means Validation, echo=FALSE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_grouped_validation <- Data_minus_columns_validation %>% group_by(TUYEAR, TESEX)
 
 sex_weighted_means_data_validation <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
@@ -417,7 +417,7 @@ for (i in c(10:16, 18)){
 }
 ```
 
-```{r Linear model for the plot Validation, eval=TRUE, echo=FALSE, message=FALSE}
+```{r Linear model for the plot Validation, eval=TRUE, echo=FALSE, message=FALSE, cache=TRUE}
 part_tu04_sex_linear_model_validation <- lm(data=part_sex_weighted_means_data_validation, part_tu04~TUYEAR + TESEX)
 part_tu04_sex_linear_model_summary_validation <- summary(part_tu04_sex_linear_model_validation)
 Year_t_validation <- coefficients(part_tu04_sex_linear_model_summary_validation)[2,3]
@@ -426,7 +426,7 @@ lm_p_value_validation <- pt(Year_t_validation, part_tu04_sex_linear_model_valida
 
 As with EDA, but this time formally, a linear model is built using **Sex** and **Year** and a t-test performed. It gives a p-value < 0.05. This means there is sufficient evidence to conclude that the proportion of American's who participate in caring for & helping non-household members has decreased over the period 2003-2017.
 
-```{r part_tu04 Sex Model Validation, message=FALSE, echo=FALSE, warning=FALSE}
+```{r part_tu04 Sex Model Validation, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 n2_validation <- nrow(part_sex_weighted_means_data_validation)
 part_tu04_sex_model_validation <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data_validation,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -445,7 +445,7 @@ part_tu04_sex_plot_validation <- ggplot(part_sex_weighted_means_data_validation,
 
 The initial thoughts about the link with number of household children, from the EDA, again needed to be tested. A new model of the same structure (natural spline with log link and multiplicative error) was built. A formal t-test could then be completed on an update of this model which includes the number of household children.
 
-```{r Adding TRCHILDNUM to model Validation, echo=FALSE, message=FALSE}
+```{r Adding TRCHILDNUM to model Validation, echo=FALSE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_child_grouped_validation <- Data_minus_columns_validation
 Data_minus_columns_year_sex_child_grouped_validation <- mutate(Data_minus_columns_year_sex_child_grouped_validation, TRCHILDNUM = ifelse(TRCHILDNUM >4, 4, TRCHILDNUM)) %>% group_by(TUYEAR, TESEX, TRCHILDNUM)
 
@@ -471,14 +471,14 @@ part_tu04_sex_child_model_validation <- glm(part_tu04 ~ -1 + TRCHILDNUM + TESEX 
                           mustart = rep(5, n3_validation))
 ```
 
-```{r Testing the new model Validation, eval=TRUE, echo=FALSE, message=FALSE, fig.height=4}
+```{r Testing the new model Validation, eval=TRUE, echo=FALSE, message=FALSE, fig.height=4, cache=TRUE}
 sex_child_summary_for_t_test_validation <- summary(part_tu04_sex_child_model_validation)
 sex_child_p_value_validation <- coefficients(sex_child_summary_for_t_test_validation)[1,4]
 ```
 
 With a p-value << 0.05, this test confirms this belief in the validation data.
 
-```{r Plotting Data Tidying, echo=FALSE, message=FALSE}
+```{r Plotting Data Tidying, echo=FALSE, message=FALSE, cache=TRUE}
 #remove full time vs part time as has -1
 Data_minus_columns_plotting <- select(ATUS_plotting_data, -one_of("TRDPFTPT"))
 #remove full time vs part time spouse as has -1
@@ -497,7 +497,7 @@ Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TRER
 Data_minus_columns_plotting <- select(Data_minus_columns_plotting, -one_of("TEHRUSLT"))
 ```
 
-```{r Sex Weighted Means Plotting, echo=FALSE, message=FALSE}
+```{r Sex Weighted Means Plotting, echo=FALSE, message=FALSE, cache=TRUE}
 Data_minus_columns_year_sex_grouped_plotting <- Data_minus_columns_plotting %>% group_by(TUYEAR, TESEX)
 
 sex_weighted_means_data_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
@@ -517,7 +517,7 @@ for (i in c(10:16, 18)){
 }
 ```
 
-```{r part_tu04 Sex Model Plotting, message=FALSE, echo=FALSE, warning=FALSE}
+```{r part_tu04 Sex Model Plotting, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 n2_plotting <- nrow(part_sex_weighted_means_data_plotting)
 part_tu04_sex_model_plotting <- glm(part_tu04 ~ -1 + TESEX + TESEX:ns(TUYEAR, knots = seq(2004, 2016, 2)), data = part_sex_weighted_means_data_plotting,
                           family = quasi(link = "log", variance = "mu^2"),
@@ -530,7 +530,7 @@ part_tu04_sex_predicted_plotting <-bind_cols(part_tu04_sex_model_data_plotting,
                                                                     ymax = exp(part_tu04_sex_predicted_plotting$fit+1.128*part_tu04_sex_predicted_plotting$se.fit))))
 ```
 
-```{r TRCHILDNUM Weighted Means Plotting, message=FALSE, echo=FALSE, warning=FALSE}
+```{r TRCHILDNUM Weighted Means Plotting, message=FALSE, echo=FALSE, warning=FALSE, cache=TRUE}
 sex_weighted_means_TRCHILDNUM_plotting <- as_tibble(expand.grid(TUYEAR=seq(2003, 2017), TESEX=as.factor(c("M", "F"))))
 for (i in 1:9){
   sex_weighted_means_TRCHILDNUM_plotting <- full_join(sex_weighted_means_TRCHILDNUM_plotting, summarise_at(Data_minus_columns_year_sex_grouped_plotting, vars(TRCHILDNUM), funs(weighted.mean(., TUFNWGTP))))
@@ -557,13 +557,13 @@ part_tu04_sex_TRCHILDNUM_plot_plotting <- ggplot(part_sex_weighted_means_data_pl
   scale_x_continuous(breaks = seq(2003,2017,2)) + xlab("Year") + ylab("Average number of children") + labs(color="Sex", fill="Sex") + theme(axis.title.y = element_text(margin = margin(t = 0, r = 10, b = 0, l = 0)), axis.title.x = element_text(margin = margin(t = 10, r = 0, b = 0, l = 0)))
 ```
 
-```{r part_tu04 Sex Plot with Number of Children Plotting, message=FALSE, echo=FALSE}
+```{r part_tu04 Sex Plot with Number of Children Plotting, message=FALSE, echo=FALSE, cache=TRUE}
 print(part_tu04_sex_TRCHILDNUM_plot_plotting)
 ```
 
 # How The Time Spent on Traditionally Gendered Activities has Converged as Gender Roles have Broken Down
 
-```{r, cache=TRUE, include=FALSE}
+```{r, echo=FALSE, cache=TRUE}
 # Get birth year as a variable for purpose of classifying generation by subtratcting age from the year the datapoint was generated
 ATUS.SUM$TUBIRTHYEAR <- ATUS.SUM$TUYEAR - ATUS.SUM$TEAGE
 ATUS.SUM$TUGENERATION <- ifelse(ATUS.SUM$TUBIRTHYEAR < 1946, "Silent Generation", 
@@ -667,33 +667,37 @@ Gender.Roles.Plotting <- filter(Gender.Roles.Data, month(TUDIARYDATE) != 7)
 
 The discussion surrounding social division between genders in terms of roles and responsibilities has consistently been a major news topic in recent years. This debate has been fuelled by a new wave of feminism, as well as a number of different social media campaigns such as *'#MeToo'* and *'Times Up'*. Both of these movements aimed to address commonplace sexual harassment and discrimination, empowering women to take back control. Given this current social climate, it was decided that an interesting area of the ATUS data to focus on would be long-term changes in time use for different sexes. Specifically, areas of time use where pre-existing gender roles are present were examined.
 
+## Exploratory Data Analysis
+
 Talcott Parsons' [@10.2307/2085686] study on gender roles - published in the 1950s - compared traditional gender roles with more liberal alternatives. A simplified version of the strictly traditional view of gender roles is detailed in the table below.
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, cache=TRUE}
 Male.Activities <- c("Working", "House Maintenance", "Vehicle Maintenance")
 Female.Activities <- c("Housework", "Cooking", "Childcare")
-kable(data.frame(Male.Activities, Female.Activities), caption  = "Traditionalist Gender Actitivies", format = "latex", booktabs = T,  col.names = c("Male Activites", "Female Activities"), align = rep('c', 2)) %>% kable_styling(full_width = T, latex_options = "HOLD_position")
+kable(data.frame(Male.Activities, Female.Activities), caption  = "Traditionalist Gender Actitivies", format = "latex", booktabs = T,  col.names = c("Male Activites", "Female Activities"), align = c('l', 'r')) %>% kable_styling(full_width = T, latex_options = "HOLD_position")
 ```
 
 The liberal viewpoint discussed by Parsons suggests an equal balance of time for the genders in these roles. Whilst this study was developed over 50 years ago, a preliminary look at the data confirmed that, in 2003, a complete transition to the liberal viewpoint had not occurred. Therefore, it was decided to investigate whether the time use of these specific activities was converging to equality or remaining stationary with noticeable differences between genders.
 
-Following some initial exploration of the data, it was also decided that looking at different generations [@generations] presented a different look at the activities, with each generations spending different lengths of time on activities. Essentially, this provides a split in the data by age, but using generations provides a way of tracking a population over time and without having to arbitrarily pick age categories. These generations are defined in the table below. A small number of participants fell outside of these ranges, however, these represented only a small number of participants and so were added to the next nearest generation (e.g. if a participant was born in 1998, they would be added to the *Millennials* generation).
+Following some initial exploration of the data and breaking down the respondents into different generations [@generations], another layer of complexity to the analysis was developed. Splitting the data by age allowed for further hypotheses regarding progression in converging time use by both genders in the areas discussed above; it would perhaps be assumed that younger people would be more progressive in this respect. Using this generational approach provided a way of tracking a population over time without having to arbitrarily pick age categories. A small number of participants fell outside of these ranges, however, these represented only a small number of participants and so were added to the next nearest generation (e.g. if a participant was born in 1998, they would be added to the *Millennials* generation).
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, cache=TRUE}
 Generations <- c("Silent Generation", "Baby Boomers", "Generation X", "Millennials")
 Birth.Years <- c("1928 - 1945", "1946 - 1964", "1965 - 1980", "1981 - 1996")
-kable(data.frame(Generations,Birth.Years),format = "latex", caption = "Generations", booktabs = T, col.names = c("Generation", "Birth Years"), align = rep('c', 2)) %>% kable_styling(full_width = T)
+kable(data.frame(Generations,Birth.Years),format = "latex", caption = "Generations", booktabs = T, col.names = c("Generation", "Birth Years"), align = c('l', 'r')) %>% kable_styling(full_width = T)
 ```
 
 For each of the activities, a suitable generalized linear model was developed using sex, year and generation as parameters. The values used to predict each model were constructed using the weighted mean formula provided in the *ATUS User's Guide*, available online in the ATUS Survey Documentation. Splines were added to the model for each year and graphical representations were produced.
 
-**For the generation classifications, it needs to reference** http://www.pewresearch.org/fact-tank/2018/03/01/millennials-overtake-baby-boomers/
+## Validation
+
+In order to validate the trends found in the EDA, the dataset was initially split 
 
 ### Working
 
 The plots below show the change in working patterns between three different generations. The *Silent Generation* have been excluded from this plot as, by 2010, the youngest of this generation will be 65. At this age, most will have retired and as such the plot is not very informative. Furthermore, the same scale is used for each graph (for purpose of easier comparison), so this affects the quality of comparison between the more informative generations.
 
-```{r, echo=FALSE, warning=FALSE, cache=TRUE, fig.height=4, fig.width=9, fig.align='c'}
+```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=9, fig.align='c', cache=TRUE}
 fit.models.and.plot(Gender.Roles.Plotting, 'Working', 250)
 ```
 
@@ -703,7 +707,7 @@ For both of these variables, it was decided that the participation rate was too 
 
 ### Housework
 
-```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=10, fig.align='c'}
+```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=10, fig.align='c', cache=TRUE}
 fit.models.and.plot(Gender.Roles.Plotting, 'Housework', 50)
 ```
 
@@ -711,7 +715,7 @@ The graphs above show that for all generations, except for *Millennials*, there 
 
 ### Cooking
 
-```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=10, fig.align='c'}
+```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=10, fig.align='c', cache=TRUE}
 fit.models.and.plot(Gender.Roles.Plotting, 'Food.Preparation', 60)
 ```
 
@@ -721,7 +725,7 @@ The graphs above show a very similar trend to `Housework` in the sense that the 
 
 For similar reasons to working, the *Silent Generation* has been excluded from this section as most of the people in this age range are unlikely to have any household children.
 
-```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=10, fig.align='c'}
+```{r, echo=FALSE, warning=FALSE, fig.height=4, fig.width=10, fig.align='c', cache=TRUE}
 fit.models.and.plot(Gender.Roles.Plotting, 'Childcare', 50)
 ```
 
@@ -733,7 +737,7 @@ One of the major limitations imposed on this research is the length of the perio
 15 years is a short period. Sporadic subset size due to the number of filters required to get down to the demographics is what actually need to investigate.
 
 The code below is to check the distribution of age group in those 15 years. It would not be a problem if there is a participant who have joined the survey several times, as her/his data would be regarded as independent samples in different years.
-```{r, cache = TRUE}
+```{r, cache=TRUE}
 #save Dan's tidy dataset as another dataset, so no need to run the code every time opening r studio.
 write.csv(Data_minus_columns,'Dataset.csv')
 Dataset <- import('Dataset.csv')
