--- a/Final Report/Final Technical Appendix.rmd
+++ b/Final Report/Final Technical Appendix.rmd
@@ -5,6 +5,8 @@ date: "20 November 2018"
 geometry: left=2cm, right=2cm, top=2cm, bottom=2cm
 output: pdf_document
 link-citations: yes
+bibliography: Final-Report-References.bib
+csl: ieee.csl
 ---
 
 ```{r Notes, echo=TRUE, message=FALSE}
@@ -95,17 +97,22 @@ Now some tidying and subsetting of the data can take place for use in the first 
 ```{r Tidying the Data, echo=TRUE, message=FALSE, cache=TRUE}
 # Check there are no other NA's other than those in format explained in the notes
 NA_check <- sum(is.na(ATUS_dataset))
+
 # Add date from respondent file and change Sex values to M and F instead of 1 and 2
 ATUS_dataset <- mutate(ATUS_dataset, TESEX = ifelse(TESEX == 1, "M", "F"))
+
 # Create a diary date column based off of the unique ID
 ATUS_dataset$TUDIARYDATE <- as.Date(paste0(substr(ATUS_dataset$TUCASEID, 1, 6), '01'), "%Y%m%d")
 ATUS_dataset_edit <- ATUS_dataset
+
 # A change of variable name in this period leads to missing values so we merge these 2 variables
 ATUS_dataset_edit <- mutate(ATUS_dataset_edit, Met_Status = as.factor(pmax(GEMETSTA, GTMETSTA)))
 ATUS_dataset_edit <- select(ATUS_dataset_edit, -one_of(c("GEMETSTA", "GTMETSTA")))
+
 # Set suitable variables as factors
 factor_columns <- c("PEEDUCA", "PEHSPNON", "PTDTRACE", "TELFS", "TEMJOT", "TESCHENR", "TESCHLVL", "TESEX", "TESPEMPNOT", "TRDPFTPT", "TRERNWA", "TRHOLIDAY", "TRSPFTPT", "TRSPPRES", "TUDIARYDAY", "TEHRUSLT")
 ATUS_dataset_edit[,factor_columns] <- lapply(ATUS_dataset_edit[,factor_columns], factor)
+
 # Create time spent and participation columns with the 17 Categories
 for (i in 1:9){
   assign(paste0("tu0", i), ATUS_dataset_edit[,grep(paste0("^t0", i), names(ATUS_dataset_edit))])
@@ -125,10 +132,12 @@ for (i in c(10:16, 18)){
   ATUS_dataset_edit <- bind_cols(ATUS_dataset_edit, part_tu0 = get(paste0("part_tu", i)))
   names(ATUS_dataset_edit)[ncol(ATUS_dataset_edit)] <- paste0("part_tu", i)
 }
+
 # Filter into two separate data sets, saving odd months (including July) for validation purposes and using the rest to train models / explore the data
 ATUS_training_data <- filter(ATUS_dataset_edit, month(TUDIARYDATE) %in% c(2,4,6,8,10,12))
 ATUS_validation_data <- filter(ATUS_dataset_edit, month(TUDIARYDATE) %in% c(1,3,5,7,9,11))
 ATUS_plotting_data <- filter(ATUS_dataset_edit, month(TUDIARYDATE) != 7)
+
 # Remove columns with -1's, -3's, -4's. We do this instead of removing rows as we would only be left with 1431 observations
 #remove full time vs part time as has -1 (35304 times)
 Data_minus_columns <- select(ATUS_training_data, -one_of("TRDPFTPT"))
@@ -564,6 +573,8 @@ print(part_tu04_sex_TRCHILDNUM_plot_plotting)
 
 # Investigating Whether the Time Spent on Traditionally Gendered Activities has Converged as Gender Roles have Broken Down
 
+## Preparing the Data and EDA
+
 Apply some reformatting to the data imported previously to better fit the exploratory analysis to be carried out. This includes the creation of a `TUBIRTHYEAR` feature to be used in separating people into different generations (Millenials, Baby Boomers etc.) represented by another feature called `TUGENERATION`. The `ATUS.CPS` dataset is then filtered to select regional data which can be joined to the dataset created so far for EDA.
 
 ```{r, cache=TRUE}
@@ -695,6 +706,8 @@ fit.models.and.plot(Gender.Roles.Train, 'Childcare', 50)
 
 Generate plots to validate the trends observed above are consistent in the other half of the data. Further validation is carried out below but these provide some initial visual validation.
 
+## Validation and Presentation
+
 ```{r, cache=TRUE}
 fit.models.and.plot(Gender.Roles.Validate, 'Working', 250)
 fit.models.and.plot(Gender.Roles.Validate, 'House.Maintenance', 10)
@@ -753,3 +766,5 @@ for (variable in c("Working", "Housework", "Food.Preparation", "Childcare")) {
 ```
 
 # Map Plot
+
+# References
